feat: manage per-member round limits
