# backend/openapi.json
@@ -616,6 +616,51 @@
         ]
       }
     },
+    "/api/v1/admin/rounds/{round_id}": {
+      "get": {
+        "operationId": "get_round_for_administration_api_v1_admin_rounds__round_id__get",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "round_id",
+            "required": true,
+            "schema": {
+              "format": "uuid",
+              "title": "Round Id",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "additionalProperties": true,
+                  "title": "Response Get Round For Administration Api V1 Admin Rounds  Round Id  Get",
+                  "type": "object"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Get Round For Administration",
+        "tags": [
+          "administration"
+        ]
+      }
+    },
     "/api/v1/admin/rounds/{round_id}/members/{user_id}": {
       "delete": {
         "operationId": "remove_round_member_api_v1_admin_rounds__round_id__members__user_id__delete",
